linux-signed (4.2.0-13.15+signed2) UNRELEASED; urgency=low

  * move linux-signed linux-image-extra-* dependencies over to linux-meta.
    (LP: #1501235)
  * allow us to configure which flavours produce a udeb of the signed
    kernel.

 -- Andy Whitcroft <apw@canonical.com>  Wed, 30 Sep 2015 09:52:07 +0100

linux-signed (4.2.0-13.15) wily; urgency=low

  [ Andy Whitcroft ]
  * Add linux-signed-*-lowlatency.  (LP: #1500910)

  [ Tim Gardner ]
  * Version 4.2.0-13.15
  * UBUNTU: comma separate the list of binaries used for Build-Depends

 -- Tim Gardner <tim.gardner@canonical.com>  Tue, 29 Sep 2015 09:31:15 -0600

linux-signed (4.2.0-12.14) wily; urgency=medium

  * Version 4.2.0-12.14

 -- Tim Gardner <tim.gardner@canonical.com>  Fri, 25 Sep 2015 07:04:06 -0600

linux-signed (4.2.0-11.13) wily; urgency=medium

  * Version 4.2.0-11.13

 -- Tim Gardner <tim.gardner@canonical.com>  Mon, 21 Sep 2015 15:18:39 -0600

linux-signed (4.2.0-10.12) wily; urgency=medium

  * Version 4.2.0-10.12

 -- Tim Gardner <tim.gardner@canonical.com>  Tue, 15 Sep 2015 13:32:28 -0600

linux-signed (4.2.0-10.10) wily; urgency=medium

  * Version 4.2.0-10.10

 -- Tim Gardner <tim.gardner@canonical.com>  Thu, 10 Sep 2015 12:21:21 -0600

linux-signed (4.2.0-9.9) wily; urgency=medium

  * Version 4.2.0-9.9

 -- Tim Gardner <tim.gardner@canonical.com>  Wed, 09 Sep 2015 13:03:12 -0600

linux-signed (4.2.0-8.8) wily; urgency=medium

  * Version 4.2.0-8.8

 -- Tim Gardner <tim.gardner@canonical.com>  Tue, 08 Sep 2015 13:05:02 -0600

linux-signed (4.2.0-7.7) wily; urgency=medium

  * Version 4.2.0-7.7

 -- Tim Gardner <tim.gardner@canonical.com>  Mon, 31 Aug 2015 09:06:41 -0600

linux-signed (4.2.0-6.6) wily; urgency=medium

  * Version 4.2.0-6.6

 -- Tim Gardner <tim.gardner@canonical.com>  Mon, 24 Aug 2015 09:30:10 -0600

linux-signed (4.2.0-5.5) wily; urgency=medium

  * Version 4.2.0-5.5

 -- Tim Gardner <tim.gardner@canonical.com>  Thu, 20 Aug 2015 14:18:02 -0600
