@@ -4,6 +4,8 @@ linux-signed (4.2.0-13.15+signed2) UNRELEASED; urgency=low
     (LP: #1501235)
   * allow us to configure which flavours produce a udeb of the signed
     kernel.
+  * switch downloads to build phase to prevent us downloading the kernel
+    binaries twice during build.
 
  -- Andy Whitcroft <apw@canonical.com>  Wed, 30 Sep 2015 09:52:07 +0100
 
